sec: clean up trust boundary fixes per code review
Agent-Logs-Url: https://github.com/carlos-emr/carlos/sessions/32d96473-970d-4ca5-8cb4-c38ec52408ca

Co-authored-by: yingbull <8680161+yingbull@users.noreply.github.com>